--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.android.gms:play-services:11.0.4'
     testCompile 'junit:junit:4.12'
 }
 
