--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.google.android.gms:play-services-location:11.4.0'
     compile 'com.google.android.gms:play-services-maps:11.4.0'
     compile 'com.google.firebase:firebase-database:11.4.0'
-    compile 'com.google.android.gms:play-services:11.4.0'
     compile 'com.google.firebase:firebase-core:11.4.0'
     compile 'com.google.firebase:firebase-auth:11.4.0'
     // FirebaseUI Auth only
