--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -41,5 +42,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.firebase:geofire-android:2.1.2'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
