--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:2.4.0'
     testCompile 'junit:junit:4.12'
     compile 'com.firebase:geofire-android:2.1.2'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+
 }
 
 
